Day 25: 用户管理模块 + PageHelper 分页 + 状态管理
新增依赖: pagehelper-spring-boot-starter 2.1.0

- UserController: /api/users CRUD + 分页, 类级 @RequireRole(ADMIN)
  GET  /api/users?page=1&size=10 — 分页列表 (PageInfo<UserVO>)
  GET  /api/users/{id}          — 单用户查询
  PUT  /api/users/{id}          — 编辑 (email/phone)
  PUT  /api/users/{id}/status   — 启用/禁用切换
  DELETE /api/users/{id}        — 删除
- UserUpdateDTO: 编辑请求 DTO
- UserMapper: 新增 updateStatus(id, status)
- UserService: listPage() 分页 + update() + toggleStatus() + delete()
- DAILY/Day25.md: 9 条 Postman 测试用例 (含 401/403 验证)

编译: 94 files, BUILD SUCCESS